Fix Zero-Wind line-wrapping on iPhone SE

--- a/hugo/static/stylesheets/screen.css
+++ b/hugo/static/stylesheets/screen.css
@@ -322,7 +322,7 @@ a.author__logo:hover #eyebrows {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
 /* Adjacent links block */
